--- a/basic-react-components/6.2.md
+++ b/basic-react-components/6.2.md
@@ -2,7 +2,6 @@
 
 A React component that will potentially contain `state` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are listed below (aka component specifications).
 
-
 <table>
   <tr>
     <td><a href="http://facebook.github.io/react/docs/component-specs.html#render"><code>render</code></a></td>
@@ -75,6 +74,7 @@ A React component that will potentially contain `state` can be created by callin
 </tr>
 </table>
 
+The most important component configuration option is `render`. This confirmation option is required and is a function that returns React nodes. All other component configurations are optional.
 
 The following code is an example of creating a `Timer` React component from React nodes using `React.createClass()`.
 
