--- a/basic-react-components/6.5.md
+++ b/basic-react-components/6.5.md
@@ -1,5 +1,12 @@
 # Referring to a component instance
 
+When a component is `render`, a React component instance is created from the passed configuration options. One can gain access to this instance and it's properties and methods (aka component API) in two ways.
+
+The first way is by using the `this` keyword from within configuration function options.
+
+[source code](https://jsfiddle.net/xkz0ph2d/4/#tabs=js,result,html,resources)
+
+The other way involves making use of the return value from calling `ReactDOM.render()`. In other words, the `ReactDOM.render()` function will return a reference to the top most reference component.
 
 
 #### Notes
