--- a/basic-react-components/6.5.md
+++ b/basic-react-components/6.5.md
@@ -4,7 +4,7 @@ When a component is `render`, a React component instance is created from the pas
 
 The first way is by using the `this` keyword from within configuration function options.
 
-[source code](https://jsfiddle.net/xkz0ph2d/4/#tabs=js,result,html,resources)
+[source code](https://jsfiddle.net/codylindley/xkz0ph2d/4/#tabs=js,result,html,resources)
 
 The other way involves making use of the return value from calling `ReactDOM.render()`. In other words, the `ReactDOM.render()` function will return a reference to the top most reference component.
 
