--- a/basic-react-components/6.5.md
+++ b/basic-react-components/6.5.md
@@ -2,11 +2,12 @@
 
 When a component is `render`, a React component instance is created from the passed configuration options. One can gain access to this instance and it's properties and methods (aka component API) in two ways.
 
-The first way is by using the `this` keyword from within configuration function options.
+The first way is by using the `this` keyword from within configuration function options. In the code example below all of the `console.log(this)` statements will refer to the component instance.
 
 [source code](https://jsfiddle.net/codylindley/xkz0ph2d/4/#tabs=js,result,html,resources)
 
-The other way involves making use of the return value from calling `ReactDOM.render()`. In other words, the `ReactDOM.render()` function will return a reference to the top most reference component.
+The other way to gain a reference to a component instance involves making use of the return value from calling `ReactDOM.render()`. In other words, the `ReactDOM.render()` function will return a reference to the top most reference component.
 
+[source code](https://jsfiddle.net/codylindley/vavk9b5t/2/#tabs=js,result,html,resources)
 
 #### Notes
