--- a/basic-react-components/6.5.md
+++ b/basic-react-components/6.5.md
@@ -1,6 +1,6 @@
 # Referring to a component instance
 
-When a component is `render`'d', a React component instance is created from the passed configuration options. One can gain access to this instance and it's properties and methods (aka component API) in two ways.
+When a component is `render`'ed', a React component instance is created from the passed configuration options. One can gain access to this instance and it's properties (e.g. `this.props`) and methods (e.g. `this.setState`) in two ways.
 
 The first way is by using the `this` keyword from within a configuration function option. In the code example below all of the `console.log(this)` statements will refer to the component instance.
 
