--- a/basic-react-components/6.5.md
+++ b/basic-react-components/6.5.md
@@ -9,3 +9,7 @@ The first way is by using the `this` keyword from within a configuration functio
 The other way to gain a reference to a component instance involves making use of the return value from calling `ReactDOM.render()`. In other words, the `ReactDOM.render()` function will return a reference to the top most rendered component.
 
 [source code](https://jsfiddle.net/codylindley/vavk9b5t/2/#tabs=js,result,html,resources)
+
+#### Notes
+
+* The `this` keyword will commonly be used from within a component to properties like `this.props.[NAME OF PROP]`, `this.props.children`, and `this.state`,. It will also be used to call class methods like `this.setState`, `this.forceUpdate()`.
