--- a/react-basic-setup/1.1.md
+++ b/react-basic-setup/1.1.md
@@ -1,6 +1,6 @@
-# Using `react.js` and `react-dom.js` in an HTML page
+# Using `react.js` and `react-dom.js` in an HTML Page
 
-The `react.js` file is the core file needed to create React elements and write react components. When you intend to render your components in an HTML document (i.e. the DOM) you'll also need the `react-dom.js` file. The `react-dom.js` file is dependent of the `react.js` file and must be included after first including the `react.js` file. An example of an HTML document properly including React is shown below.
+The `react.js` file is the core file needed to create React elements and write react components. When you intend to render your components in an HTML document (i.e., the DOM) you'll also need the `react-dom.js` file. The `react-dom.js` file is dependent of the `react.js` file and must be included after first including the `react.js` file. An example of an HTML document properly including React is shown below.
 
 ```html
 <!DOCTYPE html>
@@ -43,4 +43,4 @@ This setup is all you need to use React. However this setup does not make use of
 #### Notes
 
 * An alternative `react.js` file called `react-with-addons.js` is available [containing a collection of utility modules](https://facebook.github.io/react/docs/addons.html) for building React applications. The "addons" file can be used in place of the `react.js` file.
-* Don’t make the `<body>` element the root node for your React app. Always put a root `<div>` into `<body>`, give it an ID, and render into it. This gives React its own pool to play in without worrying about what else potentially wants to make changes to the children of the `<body>` element.
+* Don't make the `<body>` element the root node for your React app. Always put a root `<div>` into `<body>`, give it an ID, and render into it. This gives React its own pool to play in without worrying about what else potentially wants to make changes to the children of the `<body>` element.
