--- a/react-basic-setup/1.3.md
+++ b/react-basic-setup/1.3.md
@@ -93,9 +93,9 @@ var HelloMessage = (function (_React$Component) {
 ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.getElementById('app'));
 ```
 
-Most of the [ES6 features](https://github.com/lukehoban/es6features) with a few caveats can be used when writing JavaScript that is transformed by Babel 5.8.23 (i.e. [https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js](https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js)).
+Most of the [ES6 features](https://github.com/lukehoban/es6features) with a few caveats can be used when writing JavaScript that is transformed by Babel 5.8.23 (i.e., [https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js](https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js)).
 
 #### Notes
 
-* Obviously one can could still use Babel for it's intended purpose (i.e. compiling newer JavaScript code to older JavaScript code) without using JSX. However, most people using React are taking advantage of Babel for both ES\* and JSX transforming.
+* Obviously one can could still use Babel for it's intended purpose (i.e., compiling newer JavaScript code to older JavaScript code) without using JSX. However, most people using React are taking advantage of Babel for both ES\* and JSX transforming.
 * Learn more about Babel by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md).
