--- a/react-jsx/3.2.md
+++ b/react-jsx/3.2.md
@@ -1,4 +1,4 @@
-# Creating React nodes with JSX
+# Creating React Nodes With JSX
 
 Working off the knowledge given in the previous chapter you should be familiar with creating React nodes using the `React.createElement()` function. For example, using this function one can create React nodes which both represent  HTML DOM nodes and custom HTML DOM nodes. Below I use this familiar function to create two React nodes.
 
@@ -20,9 +20,9 @@ var HTMLLi = <li className="bar">foo</li>;
 var HTMLCustom = <foo-bar className="bar" >foo</foo-bar>;
 ```
 
-Notice that the JSX is not in a JavaScript string format and can just be writing as if you are writing it inside of an `.html` file. As stated many times already JSX is then transformed back into the `React.createElement()` functions calls by Babel. You can see the transformation occurring in the following JSFiddle (i.e. Babel is transforming JSX to JavaScript, then React is creating DOM nodes).
+Notice that the JSX is not in a JavaScript string format and can just be writing as if you are writing it inside of an `.html` file. As stated many times already JSX is then transformed back into the `React.createElement()` functions calls by Babel. You can see the transformation occurring in the following JSFiddle (i.e., Babel is transforming JSX to JavaScript, then React is creating DOM nodes).
 
-[source code](https://jsfiddle.net/wc6dtkov/#tabs=js,result,html,resources)
+> [source code](https://jsfiddle.net/wc6dtkov/#tabs=js,result,html,resources)
 
 If you were to examine the actual HTML produced in the above JSfiddle it would look like so:
 
@@ -38,11 +38,11 @@ Creating React nodes using JSX is as simple as writing HTML like code in your Ja
 #### Notes
 
 * JSX tags support the XML self close syntax so you can optionally leave the closing tag off when no child node is used.
-* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them to the actual DOM. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
+* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them to the actual DOM. However, if you use a custom element (i.e., not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g., `<x-my-component custom-attribute="foo" />`).
 * The `class` attribute has to be written `className`
 * The `for` attribute has to be written `htmlFor`
 * The `style` attribute takes an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
-* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`)
+* All attributes are camel-cased (e.g., `accept-charset` is written as `acceptCharset`)
 * To represent HTML elements, ensure the HTML tag is lower-cased
 * The following are the HTML attributes that React supports (shown in camel-case):
 
