--- a/react-jsx/3.4.md
+++ b/react-jsx/3.4.md
@@ -1,10 +1,10 @@
-# Using JavaScript expressions in JSX
+# Using JavaScript Expressions in JSX
 
 Hopefully by now it's obvious that JSX is just syntactical sugar that gets converted to real JavaScript. But what happens when you want to intermingle real JavaScript code within JSX? To write a JavaScript expression within JSX you will have to surround the JavaScript code in `{ }` brackets.
 
-In the React/JSX code below I am mixing JavaScript expressions (e.g. `2+2`), surround by `{ }` among the JSX that will eventually get evaluated by JavaScript.
+In the React/JSX code below I am mixing JavaScript expressions (e.g., `2+2`), surround by `{ }` among the JSX that will eventually get evaluated by JavaScript.
 
-[source code](https://jsfiddle.net/9x24jp95/#tabs=js,result,html,resources)
+> [source code](https://jsfiddle.net/9x24jp95/#tabs=js,result,html,resources)
 
 The JSX transformation will result in the follow:
 
@@ -23,7 +23,7 @@ var reactNode = React.createElement(
 ReactDOM.render(reactNode, document.getElementById('app1'));
 ```
 
-Once this code is parsed by a JavaScript engine (i.e. a browser) the JavaScript expressions are evaluated and the resulting HTML will look like so:
+Once this code is parsed by a JavaScript engine (i.e., a browser) the JavaScript expressions are evaluated and the resulting HTML will look like so:
 
 ```html
 <div id="app1">
@@ -31,4 +31,4 @@ Once this code is parsed by a JavaScript engine (i.e. a browser) the JavaScript 
 </div>
 ```
 
-Nothing that complicated is going on here once you realize that the brackets basically escape the JSX. The `{ }` brackets simply tells JSX that the content is JavaScript so leave it alone so it can eventually be parsed by a JavaScript engine (e.g. `2+2`). Note that `{ }` brackets can be used anywhere among the JSX expressions as long as the result is valid JavaScript.
+Nothing that complicated is going on here once you realize that the brackets basically escape the JSX. The `{ }` brackets simply tells JSX that the content is JavaScript so leave it alone so it can eventually be parsed by a JavaScript engine (e.g., `2+2`). Note that `{ }` brackets can be used anywhere among the JSX expressions as long as the result is valid JavaScript.
