--- a/react-jsx/3.6.md
+++ b/react-jsx/3.6.md
@@ -1,10 +1,10 @@
- # Using inline CSS in JSX
+ # Using Inline CSS in JSX
 
 In order to define inline styles on React nodes you need to pass the `style` prop/attribute a JavaScript object or reference to an object containing CSS properties and values.
 
-In the code below I first setup a JavaScript object, named `styles`, containing inline styles. Then I use the `{ }` brackets to reference the object that should be used for the value of the style prop/attribute (e.g. `style={styles}`).
+In the code below I first setup a JavaScript object, named `styles`, containing inline styles. Then I use the `{ }` brackets to reference the object that should be used for the value of the style prop/attribute (e.g., `style={styles}`).
 
-[source code](https://jsfiddle.net/4pw9w9h7/#tabs=js,result,html,resources)
+> [source code](https://jsfiddle.net/4pw9w9h7/#tabs=js,result,html,resources)
 
 Notice that, the CSS properties are in a camelCased form similar to what is used when writing [CSS properties in JavaScript](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Properties_Reference). This is required because JavaScript does not allow hyphens in names.
 
@@ -17,7 +17,7 @@ When the above React/JSX code is transformed by Babel, and then parsed by a Java
 #### Notes
 
 * Vendor prefixes other than ms should begin with a capital letter. This is why WebkitTransition has an uppercase "W".
-* CamelCased CSS properties shouldn't be a suprise given this is how it is done when accessing properties on DOM nodes from JS (e.g. `document.body.style.backgroundImage`)
+* CamelCased CSS properties shouldn't be a suprise given this is how it is done when accessing properties on DOM nodes from JS (e.g., `document.body.style.backgroundImage`)
 * When specifying a pixel value React will automatically append the string "px" for you after your number value except for the following properties:
 
 ```html
