--- a/react-jsx/3.7.md
+++ b/react-jsx/3.7.md
@@ -1,8 +1,8 @@
-# Defining attributes/props in JSX
+# Defining Attributes/Props in JSX
 
 In the previous chapter, section X.X, I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you basically already have a understanding of how React node attributes/props work. However, since JSX is used to express XML-like nodes that get turned into HTML, attribute/props are defined by adding the attributes/props to JSX expressions as name-value attributes. If it helps, attributes/props are to React nodes what arguments are to functions.
 
-In the code example below I am defining a React `<li>` element node, using JSX, with five attributes/props. One is a non-standard HTML attribute (e.g. `foo:'bar'`) and the others are known HTML attributes.
+In the code example below I am defining a React `<li>` element node, using JSX, with five attributes/props. One is a non-standard HTML attribute (e.g., `foo:'bar'`) and the others are known HTML attributes.
 
 ```js
 var styles = {backgroundColor:'red'};
@@ -51,22 +51,22 @@ When the `reactNodeLi` node is render to the DOM it will look like this:
 
 You should note the following four things:
 
-1. Leaving an attribute/prop blank results in that attribute value becoming true (e.g. `id=""` becomes `id="true"` and `test` becomes `test="true"`)
-2. The `foo` attribute, because it was not a standard HTML attribute does become a final HTML attribute, but it is still available (i.e. `this.props.foo`)
+1. Leaving an attribute/prop blank results in that attribute value becoming true (e.g., `id=""` becomes `id="true"` and `test` becomes `test="true"`)
+2. The `foo` attribute, because it was not a standard HTML attribute does become a final HTML attribute, but it is still available (i.e., `this.props.foo`)
 3. You can't write inlines styles in JSX. You have to reference an object in scope that contains CSS properties (written as JS properties).
-4. Any JavaScript values can be injected into JSX using `{}` (e.g. `test={text}` and `data-test={tested?'test':'false'}`).
+4. Any JavaScript values can be injected into JSX using `{}` (e.g., `test={text}` and `data-test={tested?'test':'false'}`).
 
 #### Notes
 
 * If an attribute/prop is duplicated the last one defined wins.
-* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a standard HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
-* Omitting the value of an attribute/prop causes JSX to treat it as true (i.e. `<input checked id type="checkbox" />` becomes `<input checked="true" id="true" type="checkbox">`). This will even occur for attributes/props that are not presented in the final HTML due to the fact they are not actual HTML attributes.
+* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e., not a standard HTML element) then arbitrary/custom attributes will be added to custom elements (e.g., `<x-my-component custom-attribute="foo" />`).
+* Omitting the value of an attribute/prop causes JSX to treat it as true (i.e., `<input checked id type="checkbox" />` becomes `<input checked="true" id="true" type="checkbox">`). This will even occur for attributes/props that are not presented in the final HTML due to the fact they are not actual HTML attributes.
 * The `class` attribute has to be written `className`
 * The `for` attribute has to be written `htmlFor`
 * The `style` attribute takes a reference to an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
-* HTML form elements (e.g. `<input></input>`, `<textarea></textarea>` etc...) created [as React nodes](https://facebook.github.io/react/docs/forms.html) support a few attributes/props that are affected by user interaction. These are: `value`, `checked`, and `selected`.
+* HTML form elements (e.g., `<input></input>`, `<textarea></textarea>`, etc.) created [as React nodes](https://facebook.github.io/react/docs/forms.html) support a few attributes/props that are affected by user interaction. These are: `value`, `checked`, and `selected`.
 * React offers the [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html) attributes/props that don't exist in DOM and take on a unique role/function.
-* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`) which differs from how they are written in HTML.
+* All attributes are camel-cased (e.g., `accept-charset` is written as `acceptCharset`) which differs from how they are written in HTML.
 * The following are the HTML attributes that React supports (shown in camel-case):
 
 ```HTML
