--- a/react-nodes/4.4.md
+++ b/react-nodes/4.4.md
@@ -1,11 +1,11 @@
 # Defining attributes/props
 
-The second argument (i.e. `props`) that is passed to `React.createElement(type, props, children)` is an object that will take React element node attributes/properties (aka props). These properties or props, as React calls them, are values associated with the React node.
+The second argument that is passed to `React.createElement(type, props, children)` is an object containing name value properties (aka props).
 
 Props take on several roles:
 
 1. Props can become HTML attributes.
-2. Props become values stored in a `prop` object as a property of `React.createElement()` instances (i.e. `this.props.[NAME OF PROP]`).
+2. Props become values stored in a `prop` object as an instance property of `React.createElement()` instances  and `React.createClass()` (i.e. `this.props.[NAME OF PROP]`).
 3. A few special props have side effects (e.g. [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html))
 
 In one sense you can think of props as the configuration options for React nodes and in another sense you can think of them as HTML attributes.
@@ -40,7 +40,7 @@ What you need to realize is only [standard HTML attributes](https://developer.mo
 
 The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available in JavaScript when the React node is used inside of a React component (e.g. `this.props.foo`).
 
-React attributes/props not only translate to real HTML attributes props but as previously mentioned can also become configuration values that can be passed to child React element nodes (i.e. React node communication). This aspect of React node props will be covered in the React props & state chapter.
+React attributes/props not only translate to real HTML attributes props but as previously mentioned can also become configuration values that can be passed to child React element nodes (i.e. React node communication). This aspect of React node props will be covered in the React props chapter.
 
 #### Notes
 
