--- a/react-props/7.1.md
+++ b/react-props/7.1.md
@@ -1,30 +1,42 @@
 # What are props?
 
-The simplest way to explain component props would be to say that they function similar to HTML attributes. For example, in the code below a `Badge` component is created and it is expecting a 'name' prop to be sent when the component is instantiated. Inside the render function of the `BadgeList` component, where Badge is used, the name prop is added to the `Badge` component much like an HTML attribute is added to an HTML element. The `name` prop is then used by the `Badge` component to customize the component.
+The simplest way to explain props would be to say that they function similar to HTML attributes. For example, in the code below a `Badge` component is created and it is expecting a 'name' prop to be sent when the component is instantiated. Inside the render function of the `BadgeList` component, where `Badge` is used, the name prop is added to the `Badge` component much like an HTML attribute is added to an HTML element (i.e. `<Badge name="Bill" />`). The `name` prop is then used by the `Badge` component to create a `<div>` that contains a text node from the value of `this.props.name`.
 
 [source code](https://jsfiddle.net/codylindley/xcL8pff7/1/#tabs=js,result,html,resources)
 
+Another way to think about props is that they are the configuration values sent to a component used by React nodes (i.e. literally arguments sent to a function). If you look at the non-JSX version of the previous code example it should be obvious props are just an object that get passed to the `createElement()` function.
+
 ```
 var Badge = React.createClass({
-	render: function() {
-		return <div>{this.props.name}</div>;
+	displayName: "Badge",
+
+	render: function render() {
+		return React.createElement(
+			"div",
+			null, //no props defined, so null
+			this.props.name //use passed this.prop.name as text node
+		);
 	}
 });
 
 var BadgeList = React.createClass({
-	render: function() {
-		return (<div>
-			<Badge name="Bill" />
-			<Badge name="Tom" />
-		</div>);
+	displayName: "BadgeList",
+
+	render: function render() {
+		return React.createElement(
+			"div",
+			null,
+			React.createElement(Badge, { name: "Bill" }),
+			React.createElement(Badge, { name: "Tom" })
+		);
 	}
 });
 
-ReactDOM.render(<BadgeList />, document.getElementById('app'));
+ReactDOM.render(React.createElement(BadgeList, null), document.getElementById('app'));
 ```
 
-Another way to think about props is that they are the configuration values sent to a component.
+Props themselves become an instance property (i.e. `this.props`) associated with each React node. Basically every component/React node has a unique instance property call `props` that starts as an empty JavaScrip object.
 
-Props themselves are an instance property object associated with each component. In the previous code example the `BadgeList` component uses two `Badge` components each with there own `this.props` object. We can verify that by console logging out the value of `this.props` when a `Badge` component is instantiated.
+In the previous code example the `BadgeList` component uses two `Badge` components each with there own `this.props` object. We can verify this by console logging out the value of `this.props` when a `Badge` component is instantiated.
 
 [source code](https://jsfiddle.net/codylindley/Lv1zaudj/2/#tabs=js,result,html,resources)
