--- a/react-props/7.1.md
+++ b/react-props/7.1.md
@@ -35,7 +35,7 @@ var BadgeList = React.createClass({
 ReactDOM.render(React.createElement(BadgeList, null), document.getElementById('app'));
 ```
 
-Props themselves become an instance property (i.e. `this.props`) associated with each React node. Basically every component/React node has a unique instance property call `props` that starts as an empty JavaScrip object.
+Props themselves become an instance property (i.e. `this.props`) associated with each React node. Basically every component/React node has a unique instance property call `props` that starts as an empty JavaScript object.
 
 In the previous code example the `BadgeList` component uses two `Badge` components each with there own `this.props` object. We can verify this by console logging out the value of `this.props` when a `Badge` component is instantiated.
 
