--- a/basic-react-components/6.2.md
+++ b/basic-react-components/6.2.md
@@ -1,6 +1,6 @@
 # Creating React components
 
-A React component that will potentially contain `state` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are listed below (aka component specifications).
+A React component that will potentially contain `state` can be created by calling the `React.createClass()` function. This function takes one argument object used to specify the details of the component. The available component configuration options are listed below (a.k.a., component specifications).
 
 <table>
   <tr>
@@ -80,7 +80,7 @@ The following code is an example of creating a `Timer` React component from Reac
 
 Make sure you read the comments in the code.
 
-[source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
+> [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
 It might look like a lot of code but all that is going on is passing the createClass function a configuration object containing 5 properties (`getInitialState`, `tick`, `componentDidMount`, `componentWillUnmount`, `render`).
 
