--- a/react-jsx/5.1.md
+++ b/react-jsx/5.1.md
@@ -1,8 +1,8 @@
-# What is JSX?
+# What Is JSX?
 
-JSX is an XML/HTML-like syntax used by React that extends ECMAScript so that XML/HTML-like text can co-exist with JavaScript/React code. The syntax is intended to be used by preprocessors (i.e. transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript objects that a JavaScript engine will parse.
+JSX is an XML/HTML-like syntax used by React that extends ECMAScript so that XML/HTML-like text can co-exist with JavaScript/React code. The syntax is intended to be used by preprocessors (i.e., transpilers like Babel) to transform HTML-like text found in JavaScript files into standard JavaScript objects that a JavaScript engine will parse.
 
-Basically, by using JSX you can write concise HTML/XML-like structures (e.g. DOM like tree structures) in the same file as you write JavaScript code, then Babel will transform these expressions into actual JavaScript code. Unlike the past, instead of putting JavaScript into HTML, JSX allows us to put HTML into JavaScript.
+Basically, by using JSX you can write concise HTML/XML-like structures (e.g., DOM like tree structures) in the same file as you write JavaScript code, then Babel will transform these expressions into actual JavaScript code. Unlike the past, instead of putting JavaScript into HTML, JSX allows us to put HTML into JavaScript.
 
 By using JSX one can write the following JSX/JavaScript code:
 
@@ -66,7 +66,7 @@ You can think of JSX as a shorthand for calling `React.createElement()`.
 
 The idea of mixing HTML and JavaScript in the same file can be a rather contentious topic. Ignore the debate. Use it if you find it helpful. If not, write the React code required to create React nodes. Your choice. My opinion is that JSX provides a concise and familiar syntax for defining a tree structure with attributes that does not require learning a templating language or leaving JavaScript. Both of which are can be a win when building large applications.
 
- It should be obvious but JSX is easier to read and write over large pyramids of JavaScript function calls or object literals (e.g. contrast the two code samples in this section). Additionally the React team clearly believes JSX is better suited for defining UI's than a traditional templating (e.g. Hanlderbars) solution:
+ It should be obvious but JSX is easier to read and write over large pyramids of JavaScript function calls or object literals (e.g., contrast the two code samples in this section). Additionally the React team clearly believes JSX is better suited for defining UI's than a traditional templating (e.g., Hanlderbars) solution:
 
  > markup and the code that generates it are intimately tied together. Additionally, display logic is often very complex and using template languages to express it becomes cumbersome. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs. We've found that the best solution for this problem is to generate HTML and component trees directly from the JavaScript code such that you can use all of the expressive power of a real programming language to build UIs.
  >
@@ -81,5 +81,5 @@ The idea of mixing HTML and JavaScript in the same file can be a rather contenti
     * By adding a JSX transformation step you'll find errors in your HTML you might otherwise miss.
     * JSX promotes the idea of inline styles. Which can be a good thing.
 * Beware of JSX [Gotchas](http://facebook.github.io/react/docs/jsx-gotchas.html).
-* JSX is a separate thing from React itself. JSX does not attempt to comply with any XML or HTML specifications. JSX is designed as an ECMAScript feature and the similarity to XML/HTML is only at the surface (i.e. it looks like XML/HTML so you can just write something familiar). A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
+* JSX is a separate thing from React itself. JSX does not attempt to comply with any XML or HTML specifications. JSX is designed as an ECMAScript feature and the similarity to XML/HTML is only at the surface (i.e., it looks like XML/HTML so you can just write something familiar). A [JSX specification is currently being drafted](https://facebook.github.io/jsx/) to by used by anyone as an a XML-like syntax extension to ECMAScript without any defined semantics.
 * In JSX, `<foo-bar />` alone is valid while alone `<foo-bar>` isn't. You have to close all tags, always.
