--- a/react-basic-setup/3.3.md
+++ b/react-basic-setup/3.3.md
@@ -1,4 +1,4 @@
-## Using ES6 & ES\* with React
+## Using ES6 & ES\* With React
 
 Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX transformer. Babel is a JavaScript compiler first.  It takes ES\* code and transforms it to run in browsers that don't support ES\* code. As of today, Babel mostly takes ES6 and ES7 code and transforms it into ES5 code. When doing these ECMAScript transformations it is trivial to also transform JSX expressions into `React.createElement()` calls. This is what we examined in the previous section.
 
@@ -93,9 +93,9 @@ var HelloMessage = (function (_React$Component) {
 ReactDOM.render(React.createElement(HelloMessage, { name: "John" }), document.getElementById('app'));
 ```
 
-Most of the [ES6 features](https://github.com/lukehoban/es6features) with a few caveats can be used when writing JavaScript that is transformed by Babel 5.8.23 (i.e. [https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js](https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js)).
+Most of the [ES6 features](https://github.com/lukehoban/es6features) with a few caveats can be used when writing JavaScript that is transformed by Babel 5.8.23 (i.e., [https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js](https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js)).
 
 #### Notes
 
-* Obviously one can could still use Babel for it's intended purpose (i.e. compiling newer JavaScript code to older JavaScript code) without using JSX. However, most people using React are taking advantage of Babel for both ES\* and JSX transforming.
+* Obviously one can could still use Babel for it's intended purpose (i.e., compiling newer JavaScript code to older JavaScript code) without using JSX. However, most people using React are taking advantage of Babel for both ES\* and JSX transforming.
 * Learn more about Babel by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md).
