--- a/react-basic-setup/3.4.md
+++ b/react-basic-setup/3.4.md
@@ -1,10 +1,10 @@
-## Writing React with JSFiddle
+## Writing React With JSFiddle
 
 The basic setup that has been describe in this chapter can also be used online via JSfiddle. JSFiddle uses the same three resources used in this chapter (`react.js`, `react-dom.js`, and `browser.js`) to make writing React online  simple.
 
 Below is an embedded JSFiddle containing the `HelloMessage` component used throughout this chapter. By clicking on the "results" tab you can view the React component rendered to the DOM. To edit the code just click on "edit with JSFiddle".
 
-[source code](https://jsfiddle.net/bvpe4j39/)
+> [source code](https://jsfiddle.net/bvpe4j39/)
 
 Note that the "Babel" tab indicates the JavaScript written into this tab will be transformed by Babel (similar too, if not directly using `browser.js`). As well, the "Resources" tab will show that JSFiddle is pulling in the `react.js` and `react-dom.js` files.
 
