--- a/react-jsx/5.5.md
+++ b/react-jsx/5.5.md
@@ -1,4 +1,4 @@
-# Using JavaScript comments in JSX
+# Using JavaScript Comments in JSX
 
 You can place JavaScript comments anywhere in React/JSX you want except locations where JSX might expect a React child node. In this situation you'll have to escape the comment using `{ }` so that JSX knows to pass that on as actual JavaScript.
 
