--- a/react-nodes/4.3.md
+++ b/react-nodes/4.3.md
@@ -4,7 +4,7 @@ React provides the `ReactDOM.render()` function from `react-dom.js` that can be 
 
 In the code example below, using `ReactDOM.render()`, the `'<li>'` and `'<foo-bar>'` React nodes are rendered to the DOM.
 
-[source code](https://jsfiddle.net/LLz4p3ox/#tabs=js,result,html,resources)
+> [source code](https://jsfiddle.net/LLz4p3ox/#tabs=js,result,html,resources)
 
 Once rendered to the DOM, the updated HTML will look like so:
 
@@ -19,7 +19,7 @@ The `ReactDOM.render()` function is how you get the React nodes from JSX/JavaScr
 
 #### Notes
 
-* Any DOM nodes inside of the DOM element in which you are rendering to will be replaced (i.e. removed).
+* Any DOM nodes inside of the DOM element in which you are rendering to will be replaced (i.e., removed).
 * `ReactDOM.render()` does not modify the DOM element node in which you are rendering React. However, when rendering React wants complete ownership of the node. You should not add children to or remove children from a node in which React inserts a component.
-* Rendering to an HTML DOM is only one option with React, [other rendering APi's are available](https://facebook.github.io/react/docs/top-level-api.html#reactdomserver.rendertostring). For example, it is also possible to render to a string (i.e. `ReactDOMServer.renderToString()` from ) on the server-side.
-* Re-rendering to the same DOM element will only update the current child nodes if a change (i.e. diff) has occurred or a new child node have been added.
+* Rendering to an HTML DOM is only one option with React, [other rendering APi's are available](https://facebook.github.io/react/docs/top-level-api.html#reactdomserver.rendertostring). For example, it is also possible to render to a string (i.e., `ReactDOMServer.renderToString()` from ) on the server-side.
+* Re-rendering to the same DOM element will only update the current child nodes if a change (i.e., diff) has occurred or a new child node have been added.
