--- a/react-nodes/4.4.md
+++ b/react-nodes/4.4.md
@@ -1,16 +1,16 @@
-# Defining attributes/props
+# Defining Attributes/Props
 
-The second argument that is passed to `React.createElement(type, props, children)` is an object containing name value properties (aka props).
+The second argument that is passed to `React.createElement(type, props, children)` is an object containing name value properties (a.k.a, props).
 
 Props take on several roles:
 
 1. Props can become HTML attributes.
-2. Props become values stored in a `prop` object as an instance property of `React.createElement()` instances  and `React.createClass()` (i.e. `this.props.[NAME OF PROP]`).
-3. A few special props have side effects (e.g. [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html))
+2. Props become values stored in a `prop` object as an instance property of `React.createElement()` instances  and `React.createClass()` (i.e., `this.props.[NAME OF PROP]`).
+3. A few special props have side effects (e.g., [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html))
 
 In one sense you can think of props as the configuration options for React nodes and in another sense you can think of them as HTML attributes.
 
-In the code example below I am defining a React `<li>` element node with five props. One is a non-standard HTML attribute (i.e. `foo:'bar'`) and the others are known HTML attributes.
+In the code example below I am defining a React `<li>` element node with five props. One is a non-standard HTML attribute (i.e., `foo:'bar'`) and the others are known HTML attributes.
 
 ```js
 var reactNodeLi = React.createElement('li',
@@ -18,12 +18,12 @@ var reactNodeLi = React.createElement('li',
     foo:'bar',
     id:'li1',
     //note use of JS class property representing class attribute below
-    //i.e. className
+    //i.e., className
     className:'blue',
     'data-test':'test',
     'aria-test':'test',
     //note use of JS camel-cased CSS property below
-    //i.e. backgroundColor
+    //i.e., backgroundColor
     style:{backgroundColor:'red'}
 },
 'text'
@@ -38,19 +38,19 @@ When the above code is rendered to an HTML page the actual HTML created will loo
 
 What you need to realize is only [standard HTML attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes), `data-*`, and `aria-*` get passed to the real DOM from the Virtual DOM.
 
-The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available in JavaScript when the React node is used inside of a React component (e.g. `this.props.foo`).
+The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available in JavaScript when the React node is used inside of a React component (e.g., `this.props.foo`).
 
-React attributes/props not only translate to real HTML attributes props but as previously mentioned can also become configuration values that can be passed to child React element nodes (i.e. React node communication). This aspect of React node props will be covered in the React props chapter.
+React attributes/props not only translate to real HTML attributes props but as previously mentioned can also become configuration values that can be passed to child React element nodes (i.e., React node communication). This aspect of React node props will be covered in the React props chapter.
 
 #### Notes
 
-* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e. not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g. `<x-my-component custom-attribute="foo" />`).
+* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e., not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g., `<x-my-component custom-attribute="foo" />`).
 * The `class` attribute has to be written `className`
 * The `for` attribute has to be written `htmlFor`
 * The `style` attribute takes a reference to an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
-* HTML form elements (e.g. `<input></input>`, `<textarea></textarea>` etc...) created [as React nodes](https://facebook.github.io/react/docs/forms.html) support a few attributes/props that are affected by user interaction. These are: `value`, `checked`, and `selected`.
+* HTML form elements (, `<input></input>`, `<textarea></textarea>`, etc.) created [as React nodes](https://facebook.github.io/react/docs/forms.html) support a few attributes/props that are affected by user interaction. These are: `value`, `checked`, and `selected`.
 * React offers the [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html) attributes/props that don't exist in DOM and take on a unique role/function.
-* All attributes are camel-cased (e.g. `accept-charset` is written as `acceptCharset`) which differs from how they are written in HTML.
+* All attributes are camel-cased (e.g., `accept-charset` is written as `acceptCharset`) which differs from how they are written in HTML.
 * The following are the HTML attributes that React supports (shown in camel-case):
 
 ```HTML
