--- a/react-nodes/4.5.md
+++ b/react-nodes/4.5.md
@@ -1,8 +1,8 @@
-# Inlining CSS on element nodes
+# Inlining CSS on Element Nodes
 
 To apply inline CSS to a React node you have to pass a `style` attribute/prop with an object value containing CSS properties and values.
 
-For example, in the code below I am passing a `style` prop referencing (i.e. `inlineStyle`) an object containing CSS properties and values:
+For example, in the code below I am passing a `style` prop referencing (i.e., `inlineStyle`) an object containing CSS properties and values:
 
 ```js
 var inlineStyles = {backgroundColor:'red', fontSize:20};
@@ -23,12 +23,12 @@ The resulting HTML will look like so:
 Note two things in the JavaScript code above:
 
 1. I didn't have to add the "px" to the `fontSize` value because React did it for me.
-2. When writing CSS properties in JavaScript one has to use the [camelCased version of the CSS property](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-ElementCSSInlineStyle) (e.g. `backgroundColor` not `background-color`).
+2. When writing CSS properties in JavaScript one has to use the [camelCased version of the CSS property](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-ElementCSSInlineStyle) (e.g., `backgroundColor` not `background-color`).
 
 #### Notes
 
 * Vendor prefixes other than ms should begin with a capital letter. This is why WebkitTransition has an uppercase "W".
-* CamelCased CSS properties shouldn't be a surprise given this is how it is done when accessing properties on DOM nodes from JS (e.g. `document.body.style.backgroundImage`)
+* CamelCased CSS properties shouldn't be a surprise given this is how it is done when accessing properties on DOM nodes from JS (e.g., `document.body.style.backgroundImage`)
 * When specifying a pixel value React will automatically append the string "px" for you after your number value except for the following properties:
 
 ```html
