--- a/react-nodes/4.6.md
+++ b/react-nodes/4.6.md
@@ -1,4 +1,4 @@
-# Using element factories
+# Using Element Factories
 
 React provides built-in shortcuts for creating commonly used element nodes. These shortcuts are called React element factories.
 
