--- a/react-jsx/5.7.md
+++ b/react-jsx/5.7.md
@@ -1,6 +1,6 @@
 # Defining Attributes/Props in JSX
 
-In the previous chapter, section 4.4, I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you basically already have a understanding of how React node attributes/props work. However, since JSX is used to express XML-like nodes that get turned into HTML, attribute/props are defined by adding the attributes/props to JSX expressions as name-value attributes. If it helps, attributes/props are to React nodes what arguments are to functions.
+In the previous chapter, section 4.4, I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you basically already have a understanding of how React node attributes/props work. However, since JSX is used to express XML-like nodes that get turned into HTML, attribute/props are defined by adding the attributes/props to JSX expressions as name-value attributes.
 
 In the code example below I am defining a React `<li>` element node, using JSX, with five attributes/props. One is a non-standard HTML attribute (e.g., `foo:'bar'`) and the others are known HTML attributes.
 
@@ -52,9 +52,9 @@ When the `reactNodeLi` node is render to the DOM it will look like this:
 You should note the following four things:
 
 1. Leaving an attribute/prop blank results in that attribute value becoming true (e.g., `id=""` becomes `id="true"` and `test` becomes `test="true"`)
-2. The `foo` attribute, because it was not a standard HTML attribute does become a final HTML attribute, but it is still available (i.e., `this.props.foo`)
-3. You can't write inlines styles in JSX. You have to reference an object in scope that contains CSS properties (written as JS properties).
-4. Any JavaScript values can be injected into JSX using `{}` (e.g., `test={text}` and `data-test={tested?'test':'false'}`).
+2. The `foo` attribute, because it was not a standard HTML attribute does become a final HTML attribute.
+3. You can't write inlines styles in JSX. You have to reference an object in scope or pass an object that contains CSS properties, written as JS properties (e.g. `style={{color:"red"}}`).
+4. JavaScript values can be injected into JSX using `{}` (e.g., `test={text}` and `data-test={tested?'test':'false'}`).
 
 #### Notes
 
@@ -83,17 +83,4 @@ optimum pattern placeholder poster preload radioGroup readOnly rel required
 reversed role rowSpan rows sandbox scope scoped scrolling seamless selected
 shape size sizes span spellCheck src srcDoc srcLang srcSet start step style
 summary tabIndex target title type useMap value width wmode wrap
-```
-
-* The following are the SVG attributes that React supports (shown in camel-case):
-
-```svg
-clipPath cx cy d dx dy fill fillOpacity fontFamily
-fontSize fx fy gradientTransform gradientUnits markerEnd
-markerMid markerStart offset opacity patternContentUnits
-patternUnits points preserveAspectRatio r rx ry spreadMethod
-stopColor stopOpacity stroke  strokeDasharray strokeLinecap
-strokeOpacity strokeWidth textAnchor transform version
-viewBox x1 x2 x xlinkActuate xlinkArcrole xlinkHref xlinkRole
-xlinkShow xlinkTitle xlinkType xmlBase xmlLang xmlSpace y1 y2 y
 ```
