--- a/react-nodes/4.4.md
+++ b/react-nodes/4.4.md
@@ -1,14 +1,14 @@
-# Defining Attributes/Props
+# Defining Node Attributes/Props
 
 The second argument that is passed to `React.createElement(type, props, children)` is an object containing name value properties (a.k.a, props).
 
 Props take on several roles:
 
-1. Props can become HTML attributes.
-2. Props become values stored in a `prop` object as an instance property of `React.createElement()` instances  and `React.createClass()` (i.e., `this.props.[NAME OF PROP]`).
+1. Props can become HTML attributes. If a prop matches a known HTML attribute then it will be added to the final HTML element in the DOM.
+2. Props passed to `createElement()` become values stored in a `prop` object as an instance property of `React.createElement()` instances  (i.e., `[INSTANCE].props.[NAME OF PROP]`).
 3. A few special props have side effects (e.g., [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html))
 
-In one sense you can think of props as the configuration options for React nodes/components and in another sense you can think of them as HTML attributes.
+In one sense you can think of props as the configuration options for React nodes and in another sense you can think of them as HTML attributes.
 
 In the code example below I am defining a React `<li>` element node with five props. One is a non-standard HTML attribute (i.e., `foo:'bar'`) and the others are known HTML attributes.
 
@@ -38,17 +38,21 @@ When the above code is rendered to an HTML page the actual HTML created will loo
 
 What you need to realize is only [standard HTML attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes), `data-*`, and `aria-*` get passed to the real DOM from the Virtual DOM.
 
-The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available in JavaScript when the React node is used inside of a React component (e.g., `this.props.foo`).
+The `foo` attribute/prop does not show up in the real DOM. This non-standard HTML attribute is available as an instance property of the created `li` React node instance. (e.g., `reactNodeLi.props.foo`).
 
-React attributes/props not only translate to real HTML attributes props but as previously mentioned can also become configuration values that can be passed to child React element nodes (i.e., React node communication). This aspect of React node props will be covered in the React props chapter.
+> [source code](https://jsfiddle.net/codylindley/8ca0z80m/1/#tabs=js,result,html,resources)
+
+React attributes/props not only translate to real HTML attributes props but can also become configuration values that can be passed to React components. This aspect of props will be covered in the React props chapter. For now simply realize that passing a React node a prop is different from defining a prop on a component to be used configuration input within a component.
 
 #### Notes
 
-* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e., not a stand HTML element) then arbitrary/custom attributes will be added to custom elements (e.g., `<x-my-component custom-attribute="foo" />`).
+* Leaving an attribute/prop blank results in that attribute value becoming true (e.g., `id=""` becomes `id="true"` and `test` becomes `test="true"`)
+* If an attribute/prop is duplicated the last one defined wins.
+* If you pass props/attributes to native HTML elements that do not exist in the HTML specification, React will not render them. However, if you use a custom element (i.e., not a standard HTML element) then arbitrary/custom attributes will be added to custom elements (e.g., `<x-my-component custom-attribute="foo" />`).
 * The `class` attribute has to be written `className`
 * The `for` attribute has to be written `htmlFor`
 * The `style` attribute takes a reference to an object of [camel-cased style properties](https://www.w3.org/TR/DOM-Level-2-Style/css.html#CSS-CSS2Properties)
-* HTML form elements (, `<input></input>`, `<textarea></textarea>`, etc.) created [as React nodes](https://facebook.github.io/react/docs/forms.html) support a few attributes/props that are affected by user interaction. These are: `value`, `checked`, and `selected`.
+* HTML form elements (e.g., `<input></input>`, `<textarea></textarea>`, etc.) created [as React nodes](https://facebook.github.io/react/docs/forms.html) support a few attributes/props that are affected by user interaction. These are: `value`, `checked`, and `selected`.
 * React offers the [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html) attributes/props that don't exist in DOM and take on a unique role/function.
 * All attributes are camel-cased (e.g., `accept-charset` is written as `acceptCharset`) which differs from how they are written in HTML.
 * The following are the HTML attributes that React supports (shown in camel-case):
@@ -67,17 +71,4 @@ optimum pattern placeholder poster preload radioGroup readOnly rel required
 reversed role rowSpan rows sandbox scope scoped scrolling seamless selected
 shape size sizes span spellCheck src srcDoc srcLang srcSet start step style
 summary tabIndex target title type useMap value width wmode wrap
-```
-
-* The following are the SVG attributes that React supports (shown in camel-case):
-
-```svg
-clipPath cx cy d dx dy fill fillOpacity fontFamily
-fontSize fx fy gradientTransform gradientUnits markerEnd
-markerMid markerStart offset opacity patternContentUnits
-patternUnits points preserveAspectRatio r rx ry spreadMethod
-stopColor stopOpacity stroke  strokeDasharray strokeLinecap
-strokeOpacity strokeWidth textAnchor transform version
-viewBox x1 x2 x xlinkActuate xlinkArcrole xlinkHref xlinkRole
-xlinkShow xlinkTitle xlinkType xmlBase xmlLang xmlSpace y1 y2 y
 ```
