--- a/react-props/7.1.md
+++ b/react-props/7.1.md
@@ -1,12 +1,12 @@
-# What Are Props?
+# What Are Component Props?
 
-The simplest way to explain props would be to say that they function similar to HTML attributes. For example, in the code below a `Badge` component is created and it is expecting a 'name' prop to be sent when the component is instantiated.
+The simplest way to explain component props would be to say that they function similar to HTML attributes. For example, in the code below a `Badge` component is created and it is expecting a 'name' prop to be sent when the component is instantiated.
 
 > [source code](https://jsfiddle.net/codylindley/xcL8pff7/1/#tabs=js,result,html,resources)
 
-Inside the render function of the `BadgeList` component, where `Badge` is used, the `name` prop is added to the `Badge` component much like an HTML attribute is added to an HTML element (i.e., `<Badge name="Bill" />`). The `name` prop is then used by the `Badge` component to create a `<div>` that contains a text node from the value of `this.props.name`.
+Inside the render function of the `BadgeList` component, where `Badge` is used, the `name` prop is added to the `Badge` component much like an HTML attribute is added to an HTML element (i.e., `<Badge name="Bill" />`). The `name` prop is then used by the `Badge` component (i.e. `this.props.name`) as the text node for the React `<div>` node rendered by the component.
 
-Another way to think about props is that they are the configuration values sent to a component used by React nodes (i.e., literally arguments sent to a function). If you look at the non-JSX version of the previous code example it should be obvious props are just an object that gets passed to the `createElement()` function.
+Another way to think about component props is that they are the configuration values sent to a component. If you look at the non-JSX version of the previous code example it should be obvious component props are just an object that gets passed to the `createElement()` function.
 
 ```
 var Badge = React.createClass({
@@ -37,8 +37,10 @@ var BadgeList = React.createClass({
 ReactDOM.render(React.createElement(BadgeList, null), document.getElementById('app'));
 ```
 
-Props themselves become an instance property (i.e., `this.props`) associated with each React node/component. Basically every React node/component has a unique instance property call `props` that starts as an empty JavaScript object.
+This is similar to how props can be set directly on React nodes (see 4.4 and 5.7). However, when the `createElement()` function is passed a component definition (i.e. `Badge`) instead of a node, the props become available on the component itself (i.e., `this.props.name`).
 
-In the previous code example the `BadgeList` component uses two `Badge` components each with there own `this.props` object. We can verify this by console logging out the value of `this.props` when a `Badge` component is instantiated.
+In the code example examined in this section the `BadgeList` component uses two `Badge` components each with there own `this.props` object. We can verify this by console logging out the value of `this.props` when a `Badge` component is instantiated.
 
 > [source code](https://jsfiddle.net/codylindley/Lv1zaudj/2/#tabs=js,result,html,resources)
+
+Basically every React component has a unique instance property call `props` that starts as an empty JavaScript object. The empty object can get filled with any JavaScript values that an object can hold.
