--- a/react-props/7.3.md
+++ b/react-props/7.3.md
@@ -1,6 +1,6 @@
 # Getting Component Props
 
-As discussed in section 6.5 a component instance can be accessed from within the component from any configuration function by using the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the render function (i.e. `this.props.name`).
+As discussed in section 6.5 a component instance can be accessed from within the component from any configuration function cope by using the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration function (i.e. `this.props.name`).
 
 ```
 var Badge = React.createClass({
@@ -11,7 +11,3 @@ var Badge = React.createClass({
 
 ReactDOM.render(<Badge name="Bill" />, document.getElementById('app'));
 ```
-
-#### Notes
-
-* A components properties should be consider immutable and components should not alter internally the properties sent to them from above. If you need to alter the properties of a component then a re-render should occur, don't set props by adding them to `this.props.`.
